--- a/qucs-doc/technical/lineardevices.tex
+++ b/qucs-doc/technical/lineardevices.tex
@@ -327,6 +327,64 @@ S_{12} = S_{21} = 1-S_{11}
 
 An ideal inductor is noise free.
 
+\section{Lossy reactances: Q-factor devices}
+The quality factor, Q, of a reactance is defined as the ratio between the stored energy and the power dissipated by the parasitic resistance.
+
+\begin{itemize}
+\item Capacitor: $Q = \frac{1}{2\cdot \pi \cdot F_0 \cdot C \cdot R}$
+\item Inductor: $Q = \frac{2\cdot \pi \cdot F_0 \cdot L }{R}$ 
+\end{itemize}
+
+\noindent where R stands for the parasitic resistance and $F_0$ is the frequency at which Q is measured, typically $F_0$ = 100 MHz. 
+The quality factor may vary depending on the frequency. In this sense, the following frequency profiles are defined:
+
+\begin{itemize}
+\item Linear: $Q(f) = Q(F_0)$ 
+\item Quadratic: $Q(f) = Q(F_0)\cdot (f/F_0)$ 
+\item Constant: $Q(f) = Q(F_0)\cdot \sqrt{f/F_0}$ 
+\end{itemize}
+
+\noindent where f is the frequency of the S-parameter analysis.
+
+
+\subsection{Equivalent circuits and S matrices}
+
+\begin{itemize}
+\item Capacitor
+\begin{figure}[ht]
+\begin{center}
+\includegraphics[width=2.5cm]{capq}
+\end{center}
+\caption{Capacitor with Q. Equivalent circuit}
+\label{fig:capq_ec}
+\end{figure}
+
+
+\begin{equation}
+S = \frac{1}{ 2 + \frac{R - j \frac{1}{\omega C}}{Z_0} }\begin{bmatrix}
+\frac{R - j \frac{1}{\omega C}}{Z_0} &  2\\
+2 & \frac{R - j \frac{1}{\omega C}}{Z_0}\\
+\end{bmatrix}
+\end{equation}
+
+\item Inductor
+\begin{figure}[ht]
+\begin{center}
+\includegraphics[width=2.5cm]{indq}
+\end{center}
+\caption{Inductor with Q. Equivalent circuit}
+\label{fig:indq_ec}
+\end{figure}
+
+\begin{equation}
+S = \frac{1}{ 2 + \frac{R + j \omega L }{Z_0} }\begin{bmatrix}
+\frac{R + j \omega L }{Z_0} &  2\\
+2 & \frac{R + j \omega L}{Z_0}\\
+\end{bmatrix}
+\end{equation}
+
+\noindent where $Z_0$ is the reference impedance of the simulator (50 $\Omega$).
+\end{itemize}
 
 \section{DC Block}
 
